fixed position counter

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+body {
+  background-color: #fafafa;
+}
+
 .section-title {
   border-bottom: 1px solid gray;
   padding: 8px;
@@ -12,16 +16,26 @@ header {
 }
 
 button {
-  border: 1px solid black;
+  border: 1px solid darkgray;
   padding: 8px;
   border-radius: 5px;
   transition-duration: 0.1ms;
   margin: 3px;
+  background-color: whitesmoke;
+  min-width: fit-content;
 }
 
 button:hover {
-  background-color: darkgray;
+  background-color: lightgray;
   font-weight: 600;
+}
+
+article {
+  margin: 2em 0;
+  padding-bottom: 1em;
+  text-align: justify;
+  background-color: white;
+  box-shadow: 0 1px 12px 0 rgb(138 136 138 / 93%);
 }
 
 img {
@@ -30,9 +44,26 @@ img {
   max-width: 100%;
 }
 
-.article-title-paragraph-button {
-    margin: 0 2em;
-  }
+.article-content {
+  margin: 0 2em;
+  display: grid;
+  grid-template-columns: 25% 25% 50%;
+  grid-template-rows: 0.5fr 3fr 0.5fr;
+}
+
+.article-content h2 {
+  grid-column: 1/5;
+}
+
+.article-content p {
+  grid-column: 1/5;
+}
+
+.article-content span {
+  grid-column: 3/5;
+  justify-self: end;
+  align-self: center;
+}
 
 @media only screen and (max-width: 600px) {
   nav {
@@ -42,11 +73,6 @@ img {
   body {
     display: flex;
     flex-direction: column;
-  }
-
-  article {
-    margin: 2em 0;
-    text-align: justify;
   }
 
   .article-images {
@@ -59,16 +85,11 @@ img {
 }
 
 @media only screen and (min-width: 600px) {
-  main {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
   section {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto auto;
-    align-content: space-between;
+    align-content: stretch;
   }
 
   .section-title {
@@ -76,13 +97,8 @@ img {
   }
 
   article {
-    padding: 1em 0.2em;
-    text-align: justify;
-    margin: 0 0.2em;
-    display: flex;
-    flex-direction: column;
-    gap: 10px 10px;
-    align-self: start;
+    margin: 1em;
+    padding-bottom: 1em;
   }
 
   .article-images {
@@ -100,7 +116,6 @@ img {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto;
     margin: auto;
-
   }
 
   .section-title {
